--- a/src/frontend/templates/index.html
+++ b/src/frontend/templates/index.html
@@ -5,7 +5,7 @@
     <div class="row align-items-center">
         <!-- Text and Buttons on the Left, with reduced width -->
         <div class="col-lg-6">
-            <h1 style="font-size: 36px; font-weight: bold;">Automate System Testing with AssistantLM</h1>
+            <h1 style="font-size: 36px; font-weight: bold;">AssistantLM: Your Personal Assistant. Anytime. Anywhere</h1>
             <p style="font-size: 18px; max-width: 80%;">Introducing AssistantLM, your personal assistant for all things government-related. Seamlessly navigate through complex information and services with expert guidance from top-tier AI models. From visa applications to residence permits, AssistantLM ensures you have the information you need, precisely when you need it.</p>
             <a href="#" class="btn btn-primary btn-lg rounded-pill me-2" style="background-color: rgb(16, 28, 36); border: None" role="button">GitHub</a>
             <a href="#try-AssistantLM" class="btn btn-secondary btn-lg rounded-pill" style="background-color: rgb(49, 158, 151); border: None" role="button">Use AssistantLM</a>
