--- a/src/frontend/templates/base.html
+++ b/src/frontend/templates/base.html
@@ -33,7 +33,7 @@
 
     <main>
       {% block content %}
-      <!-- Main content unique to each page will go here -->
+      <!-- Main content here -->
       {% endblock %}
     </main>
 
